--- a/day3/src/App.css
+++ b/day3/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+.content-table{
+  border-collapse: collapse;
+  margin: 25px, 0;
+  font-size: 0.9em;
+  min-width: 1100px;
+  min-height: 150px;
+  padding: 50px;
+  position: relative;
+  top:20px;
+  left: 25px;
+  border: solid #ccc 1px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 1px 1px #ccc;
+  -moz-box-shadow: 0 1px 1px #ccc;
+  box-shadow: 0 1px 1px #ccc;
+ 
+} 
